# coding-challenge

./: .gitignore
embedded-development/: CMakeLists.txt  README-mschoepf.md
embedded-development/master/: CMakeLists.txt
embedded-development/master/include/: statemachine.h
embedded-development/master/src/: main.cpp
embedded-development/motordriver/: CMakeLists.txt  motordriver-config.cmake.in
embedded-development/motordriver/include/: motordriver.h
embedded-development/test-unit/: CMakeLists.txt  all_test_cases_here.cpp
